Align tables left and fixed missing borders of table header and cells

--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -117,6 +117,7 @@ h6:target::before {
 table {
     margin: 0 auto;
     border-collapse: collapse;
+    float: left;
 }
 table td {
     padding: 3px 20px;
@@ -131,9 +132,10 @@ table thead td {
 }
 table thead th {
     padding: 3px 20px;
+    border: 1px var(--table-border-color) solid;
 }
 table thead tr {
-    border: 1px var(--table-header-bg) solid;
+    border: 1px var(--table-border-color) solid;
 }
 /* Alternate background colors for rows */
 table tbody tr:nth-child(2n) {
